# crypto-rs

./: Cargo.toml  README.md
src/: lib.rs  signature.rs
src/rust_crypto/: adaptor.rs  mod.rs  random.rs
src/schnorr/: error.rs  signature.rs
src/schnorr/rust_crypto/: adaptor.rs
src/schnorr/signature/: adaptor.rs
tests/: adaptor.rs
