[package]
name = "schnorr-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
thiserror = "1.0.38"


# crypto
k256 = { version = "^0.12", optional = true, features = ["expose-field"] }
rand = { version = "^0.8.5", features = ["getrandom"], optional = true }


[dev-dependencies]
log = "0.4.16"
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
async-std = { version = "1.11.0", features = ["attributes", "default"] }
criterion = { version = "0.4", features = ["async_futures", "html_reports"] }


[features]
default = ["rust_crypto"]
rust_crypto = ["k256", "rand"]
